Bug 78903 - Calc doesn't recalculate formula automatically when deleting a row.
Summary: Calc doesn't recalculate formula automatically when deleting a row.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-19 11:29 UTC by Parinya Teerakasemsuk
Modified: 2014-05-28 23:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (30.71 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-05-19 11:29 UTC, Parinya Teerakasemsuk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Parinya Teerakasemsuk 2014-05-19 11:29:58 UTC
Created attachment 99327 [details]
Sample file

Calc doesn't recalculate formula automatically when deleting a row. Even if "Tools > Cell Contents > AutoCalculate" enabled. Users have to manually perform Shift+Ctrl+F9 to recalculate all formulas in the document.

This is a critical bug as I almost send my BOQ to my client. And no one knows what will happen next...
Comment 1 m_a_riosv 2014-05-19 23:27:38 UTC
Hi Parinya, thanks for report.

I can't reproduce with:
Win7x64
Version: 4.2.4.2 Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f8

With your sample file, deleting row 6, values in I10:I14 are all recalculated.
Comment 2 Parinya Teerakasemsuk 2014-05-20 05:19:08 UTC
This is my screencast with the bug on Ubuntu 14.04 LTS 64bit. http://youtu.be/GMfRptR7THo

The bug is occurring here on Ubuntu 14.04 LTS 64bit, updated to the latest version. LibreOffice 4.2.4.2 from LibreOffice 4.2.X PPA.
Comment 3 m_a_riosv 2014-05-20 07:59:15 UTC
Sorry and thanks, I can see the issue now.

Reproducible with:
Win7x64Ultimate
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Version: 4.2.3.3 Build ID: 882f8a0a489bc99a9e60c7905a60226254cb6ff0
Version: 4.2.4.2 Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f8
Version: 4.2.5.0.0+ Build ID: d758875cd0ea87f8c7bbe1bbb78e49d06254cbee
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-05-17_04:23:54
Version: 4.3.0.0.alpha1+ Build ID: 48eccfb812284f43ba24c3be3903537ce954944d
   TinderBox: Win-x86@39, Branch:master, Time: 2014-05-16_00:35:19

Last version where I can't reproduce:
Version: 4.1.6.2 Build ID: 40ff705089295be5be0aae9b15123f687c05b0a


Seems that only direct dependencies are calculated I11,
but not indirect one I12 (=I11*0,17).
Comment 4 Kohei Yoshida 2014-05-22 15:54:19 UTC
I'm looking into this right now.
Comment 5 Commit Notification 2014-05-23 00:59:43 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa2751ea5ce9066002a250f06bf5d056f6e0b71b

fdo#78903: Write test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-05-23 00:59:55 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb167ac784f9b16944da4494b65e56b2a5b66bb7

fdo#78903: Don't broadcast prematurely during cell deletion.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-05-23 01:03:31 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1972488c6ededaf36b97c1880316df1f94e275e5&h=libreoffice-4-3

fdo#78903: Write test for this.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-05-23 01:03:44 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62b3d1dedfd7dd85b18297890d35e2c9368f0fef&h=libreoffice-4-3

fdo#78903: Don't broadcast prematurely during cell deletion.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-05-23 01:03:51 UTC
4.2 backport: https://gerrit.libreoffice.org/9443
Comment 10 Commit Notification 2014-05-23 20:07:49 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9d8f8074edbb63db467cc451c0596585e2f0422c&h=libreoffice-4-2

fdo#78903: Don't broadcast prematurely during cell deletion.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2014-05-23 20:11:12 UTC
Fixed in 4.2.
Comment 12 m_a_riosv 2014-05-28 23:56:33 UTC
Thanks Kohei,
verified:
Win7x64
Version: 4.2.5.1 Build ID: 881bb88abfe2992c6cede97c23e64a9885de87de
Version: 4.2.6.0.0+ Win-x86@42, Branch:libreoffice-4-2, Time: 2014-05-28_10:43:01
Version: 4.4.0.0.alpha0+ Win-x86@39, Branch:master, Time: 2014-05-26_01:36:09

Still reproducible for me with:
Version: 4.3.0.0.beta1 Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f